--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,3 +1,27 @@
 .heading {
   color: red;
 }
+
+.block-button {
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+}
+
+.submit-inquiry {
+  background-color: #ffffff;
+  color: #dd3333;
+  border: 2px solid #dd3333;
+}
+
+.submit-inquiry:hover {
+  background-color: #dd3333;
+  color: #ffffff;
+}
