--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,6 +1,46 @@
-.heading {
-  color: red;
+body {
+  background-color:#fff;
 }
+
+.heading {
+  color: #000;
+  padding-left: 5%;
+  padding-right: 5%;
+  /* padding-bottom: 10%;
+  padding-top: 10%; */
+  margin: 0 auto;
+  max-width: 1120px;
+  background-color: lightgray;
+}
+
+.heading h1 {
+
+  font-family: Helvetica;
+  font-size: 8vw;
+  text-align: left;
+
+}
+
+.heading h1, .logo {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.logo {
+  margin-left: 1vw;
+  width: 10vw;
+}
+
+/* .heading .logo {
+  position: sticky;
+  float: inline-end;
+  top: 0'
+  left: 0px;
+  width: 50px;
+  height: 50px;
+} */
+
+.heading p {}
 
 .block-button {
   border: none;
@@ -24,4 +64,34 @@
 .submit-inquiry:hover {
   background-color: #dd3333;
   color: #ffffff;
+}
+
+.topnav {
+  position: relative;
+  overflow: hidden;
+  background-color: #333;
+}
+
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  transition: .3s;
+}
+
+.topnav a.active {
+  background-color: #ffffff;
+  color: #333;
+}
+
+.topnav a:hover {
+  background-color: #fff;
+  Color: #333;
+}
+
+.topnav-right {
+  float: right;
 }
