--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,34 +1,33 @@
 body {
-  background-color:#fff;
+	background-color: #fff;
 }
 
 .heading {
-  color: #000;
-  padding-left: 5%;
-  padding-right: 5%;
-  /* padding-bottom: 10%;
+	color: #000;
+	padding-left: 5%;
+	padding-right: 5%;
+	/* padding-bottom: 10%;
   padding-top: 10%; */
-  margin: 0 auto;
-  max-width: 1120px;
-  background-color: lightgray;
+	margin: 0 auto;
+	max-width: 1120px;
+	background-color: lightgray;
 }
 
 .heading h1 {
-
-  font-family: Helvetica;
-  font-size: 8vw;
-  text-align: left;
-
+	font-family: Helvetica;
+	font-size: 8vw;
+	text-align: left;
 }
 
-.heading h1, .logo {
-  display: inline-block;
-  vertical-align: middle;
+.heading h1,
+.logo {
+	display: inline-block;
+	vertical-align: middle;
 }
 
 .logo {
-  margin-left: 1vw;
-  width: 10vw;
+	margin-left: 1vw;
+	width: 10vw;
 }
 
 /* .heading .logo {
@@ -40,58 +39,59 @@ body {
   height: 50px;
 } */
 
-.heading p {}
+.heading p {
+}
 
 .block-button {
-  border: none;
-  color: white;
-  padding: 16px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  transition-duration: 0.4s;
-  cursor: pointer;
+	border: none;
+	color: white;
+	padding: 16px 32px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+	margin: 4px 2px;
+	transition-duration: 0.4s;
+	cursor: pointer;
 }
 
 .submit-inquiry {
-  background-color: #ffffff;
-  color: #dd3333;
-  border: 2px solid #dd3333;
+	background-color: #ffffff;
+	color: #dd3333;
+	border: 2px solid #dd3333;
 }
 
 .submit-inquiry:hover {
-  background-color: #dd3333;
-  color: #ffffff;
+	background-color: #dd3333;
+	color: #ffffff;
 }
 
 .topnav {
-  position: relative;
-  overflow: hidden;
-  background-color: #333;
+	position: relative;
+	overflow: hidden;
+	background-color: #9d0d0d;
 }
 
 .topnav a {
-  float: left;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-  transition: .3s;
+	float: left;
+	color: #f2f2f2;
+	text-align: center;
+	padding: 14px 16px;
+	text-decoration: none;
+	font-size: 17px;
+	transition: 0.3s;
 }
 
 .topnav a.active {
-  background-color: #ffffff;
-  color: #333;
+	background-color: #ffffff;
+	color: #333;
 }
 
 .topnav a:hover {
-  background-color: #fff;
-  Color: #333;
+	background-color: #fff;
+	color: #333;
 }
 
 .topnav-right {
-  float: right;
+	float: right;
 }
