--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3,14 +3,8 @@ body {
 }
 
 .heading {
-	color: #000;
-	padding-left: 5%;
-	padding-right: 5%;
-	/* padding-bottom: 10%;
-  padding-top: 10%; */
-	margin: 0 auto;
-	max-width: 1120px;
-	background-color: lightgray;
+	text-align: center;
+	border: 3px solid green;
 }
 
 .submit-inquiry {
