css change color of box around h1 heading

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -4,7 +4,7 @@ body {
 
 .heading {
 	text-align: center;
-	border: 3px solid green;
+	border: 3px solid #9d0d0d;
 	margin: 1rem 3rem;
 	padding: 5rem;
 }
